// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`click on one feature, and do not re-render 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="145"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(0.3, 0)"
    >
      <rect
        data-testid="box-one"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="2"
        x="0"
        y="0"
      />
    </g>
    <g
      transform="translate(0.3, 15)"
    >
      <rect
        data-testid="box-two"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="2"
        x="0"
        y="0"
      />
    </g>
    <g
      transform="translate(0.3, 30)"
    >
      <rect
        data-testid="box-three"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="2"
        x="0"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`forward and reverse strand genes 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="127"
    style="display: block;"
    width="200"
  >
    <g
      transform="translate(10, 0)"
    />
    <g
      transform="translate(110, 0)"
    />
  </svg>
</div>
`;

exports[`gene with CDS children 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="115"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(1991.7, 0)"
    >
      <line
        data-testid="one"
        stroke="#000000"
        x1="0"
        x2="1256.3333333333333"
        y1="5"
        y2="5"
      />
      <line
        stroke="#000000"
        x1="1256.3333333333333"
        x2="1263.3333333333333"
        y1="5"
        y2="5"
      />
      <polygon
        fill="#000000"
        points="1259.8333333333333,2.5 1259.8333333333333,7.5 1263.3333333333333,5"
        stroke="#000000"
      />
    </g>
  </svg>
</div>
`;

exports[`gene with multiple transcripts 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="139"
    style="display: block;"
    width="200"
  >
    <g
      transform="translate(10, 0)"
    />
  </svg>
</div>
`;

exports[`gene with transcript and UTRs 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="127"
    style="display: block;"
    width="200"
  >
    <g
      transform="translate(10, 0)"
    />
  </svg>
</div>
`;

exports[`longest transcript mode 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="127"
    style="display: block;"
    width="200"
  >
    <g
      transform="translate(10, 0)"
    />
  </svg>
</div>
`;

exports[`multiple overlapping features get stacked 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="154"
    style="display: block;"
    width="200"
  >
    <g
      transform="translate(20, 0)"
    >
      <rect
        data-testid="box-test1"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="60"
        x="0"
        y="0"
      />
    </g>
    <g
      transform="translate(60, 27)"
    >
      <rect
        data-testid="box-test2"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="60"
        x="0"
        y="0"
      />
    </g>
    <g
      transform="translate(100, 0)"
    >
      <rect
        data-testid="box-test3"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="80"
        x="0"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`no features 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="120"
    style="display: block;"
    width="100"
  />
</div>
`;

exports[`one feature (compact mode) 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="122"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(1991.7, 0)"
    >
      <line
        data-testid="one"
        stroke="#000000"
        x1="0"
        x2="1256.3333333333333"
        y1="2.5"
        y2="2.5"
      />
      <line
        stroke="#000000"
        x1="1256.3333333333333"
        x2="1263.3333333333333"
        y1="2.5"
        y2="2.5"
      />
      <polygon
        fill="#000000"
        points="1259.8333333333333,0 1259.8333333333333,5 1263.3333333333333,2.5"
        stroke="#000000"
      />
    </g>
  </svg>
</div>
`;

exports[`one feature 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="115"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(0.3, 0)"
    >
      <rect
        data-testid="box-one"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="2"
        x="0"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`processed transcript (exons + impliedUTR) 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="139"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(7759845, 0)"
    >
      <line
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-107608116-0"
        stroke="#000000"
        x1="0"
        x2="6608"
        y1="5"
        y2="5"
      />
      <rect
        data-testid="box-type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-107608116-0-1"
        fill="goldenrod"
        height="10"
        stroke=""
        width="327.3333333333333"
        x="0"
        y="0"
      />
      <rect
        data-testid="box-type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-107608116-0-8"
        fill="goldenrod"
        height="10"
        stroke=""
        width="327.3333333333333"
        x="0"
        y="0"
      />
      <rect
        data-testid="box-type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-107608116-0_five_prime_UTR_7"
        fill="#357089"
        fill-opacity="1"
        height="6.5"
        width="31.666666666666668"
        x="6576.333333333333"
        y="1.75"
      />
      <rect
        data-testid="box-type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-107608116-0_five_prime_UTR_6"
        fill="#357089"
        fill-opacity="1"
        height="6.5"
        width="38.333333333333336"
        x="6424.666666666667"
        y="1.75"
      />
    </g>
  </svg>
</div>
`;

exports[`processed transcript (reducedRepresentation mode) 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="115"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(0.3, 0)"
    >
      <rect
        data-testid="box-one"
        fill="#daa520"
        fill-opacity="1"
        height="10"
        width="2"
        x="0"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`processed transcript 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="127"
    style="display: block;"
    width="333.3333333333333"
  >
    <g
      transform="translate(1991.7, 0)"
    >
      <line
        data-testid="one"
        stroke="#000000"
        x1="0"
        x2="1256.3333333333333"
        y1="5"
        y2="5"
      />
      <line
        stroke="#000000"
        x1="1256.3333333333333"
        x2="1263.3333333333333"
        y1="5"
        y2="5"
      />
      <polygon
        fill="#000000"
        points="1259.8333333333333,2.5 1259.8333333333333,7.5 1263.3333333333333,5"
        stroke="#000000"
      />
    </g>
  </svg>
</div>
`;

exports[`segments feature (no CDS) 1`] = `
<div>
  <svg
    data-testid="svgfeatures"
    height="127"
    style="display: block;"
    width="200"
  >
    <g
      transform="translate(10, 0)"
    />
  </svg>
</div>
`;

exports[`svg selected 1`] = `
<div>
  <svg>
    <rect
      data-testid="one"
      fill="#000"
      fill-opacity="0.2"
      height="14"
      width="7.3"
      x="-2"
      y="-2"
    />
    <rect
      fill="none"
      height="14"
      stroke="#00b8ff"
      width="7.3"
      x="-2"
      y="-2"
    />
  </svg>
</div>
`;
